@@ -251,6 +251,41 @@ return|return
 literal|null
 return|;
 block|}
+name|double
+name|d
+init|=
+name|n
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|Double
+operator|.
+name|isNaN
+argument_list|(
+name|d
+argument_list|)
+operator|||
+name|Double
+operator|.
+name|isInfinite
+argument_list|(
+name|d
+argument_list|)
+condition|)
+block|{
+name|doubleWritable
+operator|.
+name|set
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|doubleWritable
 operator|.
 name|set
@@ -259,10 +294,7 @@ name|BigDecimal
 operator|.
 name|valueOf
 argument_list|(
-name|n
-operator|.
-name|get
-argument_list|()
+name|d
 argument_list|)
 operator|.
 name|setScale
@@ -281,6 +313,7 @@ name|doubleValue
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 return|return
 name|doubleWritable
 return|;
